# GoQuantApp

./: CMakeLists.txt  README.md
GoQuantApp/: apiCredentials.cpp  main.cpp  orderManager.cpp  orderManager.h  tokenManager.cpp  utilityManager.cpp  webSocketClient.cpp
